# rules_typescript_proto

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  index.bzl  package-lock.json  package.json  postinstall.tsconfig.json  renovate.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: SHA256SUMS  ci.yaml
docs/: migrating_from_ts_protoc_gen.md  migrating_to_multi_rules.md
patches/: rules_nodejs.patch
scripts/: ij.bazelproject
src/: BUILD.bazel  change_import_style.ts  package.json  rules_typescript_proto_dependencies.bzl  tsconfig.json  typescript_grpc_node_library.bzl  typescript_grpc_web_library.bzl  typescript_proto_build.bzl  typescript_proto_library.bzl
test/: BUILD.bazel  commonjs_test.spec.ts  pizza_service_proto_grpc_node_test.spec.ts  pizza_service_proto_test.spec.ts  proto_with_deps_test.spec.ts  require.config.js  rollup.config.js  rollup_in_browser_test.spec.ts  rollup_test.spec.js  rollup_test.spec.ts  test_bundling.ts  test_bundling_tsconfig.json  test_es6_bundling.d.ts  tsconfig.json
test/integration/: BUILD.bazel  IntegrationTest.java  envoy.yaml
test/integration/client/: BUILD.bazel  app.component.html  app.component.ts  app.module.ts  index.dev.html  index.prod.html  index.scss  require.config.js  rollup.config.js  rxjs_shims.js
test/integration/proto/: BUILD.bazel  service.proto
test/proto/: BUILD.bazel  pizza_service.proto
test/proto/common/: BUILD.bazel  delivery_person.proto
test/proto/dir/: inside.proto
