load("@rules_typescript_proto_deps//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "change_import_style",
    data = [
        ":change_import_style_lib",
        "@rules_typescript_proto_deps//:node_modules"
    ],
    entry_point = ":change_import_style.ts",
    templated_args = ["--bazel_patch_module_resolver"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "change_import_style_lib",
    srcs = [
        "change_import_style.ts",
    ],
    deps = ["@rules_typescript_proto_deps//:node_modules"],
)
