load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@rules_typescript_proto_deps//@bazel/typescript:index.bzl", "ts_project")

js_binary(
    name = "change_import_style",
    data = [
        ":change_import_style_lib",
    ],
    entry_point = ":change_import_style.ts",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "change_import_style_lib",
    srcs = [
        "change_import_style.ts",
    ],
    deps = [
        "@rules_typescript_proto_deps//@types/node",
        "@rules_typescript_proto_deps//minimist",
    ],
)
