load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_karma//:index.bzl", "karma_web_test_suite")

# This test checks that the protos can be resolved in a nodejs environment
jasmine_node_test(
    name = "commonjs_test",
    data = [
        "@npm//google-protobuf",
        "@npm//grpc-web",
    ],
    deps = [
        ":commonjs_test_lib",
    ],
)

ts_library(
    name = "commonjs_test_lib",
    srcs = [
        "commonjs_test.spec.ts",
    ],
    tsconfig = ":tsconfig.json",
    deps = [
        "//test/proto:pizza_service_ts_proto",
        "//test/proto/common:delivery_person_ts_proto",
        "@npm//@types/jasmine",
    ],
)

# Copy the google-protobuf library and convert it to a AMD module so it can be loaded in the
# RequireJS test environment.

ts_library(
    name = "proto_with_deps_test",
    testonly = 1,
    srcs = ["proto_with_deps_test.spec.ts"],
    tsconfig = ":tsconfig.json",
    deps = [
        "//test/proto/common:delivery_person_ts_proto",
        "@npm//@types/jasmine",
        # Don't put pizza_ts_proto here, we want to test it is included transitively
    ],
)

karma_web_test_suite(
    name = "proto_with_deps_test_suite",
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    tags = ["native"],
    deps = [
        ":proto_with_deps_test",
    ],
)

ts_library(
    name = "pizza_service_proto_test",
    testonly = 1,
    srcs = ["pizza_service_proto_test.spec.ts"],
    tsconfig = ":tsconfig.json",
    deps = [
        "//test/proto/common:pizza_ts_proto",
        "@npm//@types/jasmine",
        "//test/proto:pizza_service_ts_proto",
        # Don't put delivery_person_ts_proto here, we want to test it is included transitively
    ],
)

karma_web_test_suite(
    name = "pizza_service_proto_test_suite",
    srcs = [
        "@npm//google-protobuf:google-protobuf__umd",
        "@npm//grpc-web:grpc-web__umd",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    tags = ["native"],
    deps = [
        ":pizza_service_proto_test",
    ],
)

rollup_bundle(
    name = "test_es6_bundling",
    entry_points = {
        ":test_bundling.ts": "index",
    },
    format = "cjs",
    output_dir = True,
    deps = [
        ":test_bundling_lib",
        "@npm//rollup-plugin-commonjs",
        "@npm//rollup-plugin-node-resolve",
    ],
)

ts_library(
    name = "test_bundling_lib",
    srcs = ["test_bundling.ts"],
    tsconfig = ":test_bundling_tsconfig.json",
    deps = [
        "//test/proto:naming_styles_ts_proto",
        "//test/proto:pizza_service_ts_proto",
        "//test/proto/common:delivery_person_ts_proto",
        "//test/proto/common:pizza_ts_proto",
        "@npm//google-protobuf",
        "@npm//grpc-web",
    ],
)

jasmine_node_test(
    name = "rollup_test",
    srcs = [
        ":rollup_test.spec.js",
    ],
    data = [
        ":test_es6_bundling",
    ],
)
