load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/concatjs:index.bzl", "karma_web_test_suite")

# This test checks that the protos can be resolved in a nodejs environment
jasmine_node_test(
    name = "commonjs_test",
    data = [
        "@npm//@improbable-eng/grpc-web",
        "@npm//google-protobuf",
    ],
    templated_args = ["--bazel_patch_module_resolver"],
    deps = [
        ":commonjs_test_lib",
    ],
)

ts_library(
    name = "commonjs_test_lib",
    srcs = [
        "commonjs_test.spec.ts",
    ],
    tsconfig = ":tsconfig.json",
    deps = [
        "//test/proto:inside_dir_ts_proto",
        "//test/proto:pizza_service_ts_base_proto",
        "//test/proto:pizza_service_ts_grpc_web_proto",
        "//test/proto/common:delivery_person_ts_proto",
        "@npm//google-protobuf",
        "@npm//@types/google-protobuf",
        "@npm//@types/jasmine",
    ],
)

# Copy the google-protobuf library and convert it to a AMD module so it can be loaded in the
# RequireJS test environment.
genrule(
    name = "google_protobuf_requirejs",
    srcs = [
        "@npm//:node_modules/google-protobuf/google-protobuf.js",
    ],
    outs = [
        "google-protobuf.js",
    ],
    cmd = """echo "define('google-protobuf', function(require, exports, module) {" > $@ \
             && cat $< >> $@ \
             && echo '});' >> $@""",
)

ts_library(
    name = "proto_with_deps_test",
    testonly = 1,
    srcs = ["proto_with_deps_test.spec.ts"],
    tsconfig = ":tsconfig.json",
    deps = [
        "//test/proto/common:delivery_person_ts_proto",
        "@npm//@types/jasmine",
        # Don't put pizza_ts_proto here, we want to test it is included transitively
    ],
)

karma_web_test_suite(
    name = "proto_with_deps_test_suite",
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    tags = ["native"],
    deps = [
        ":google_protobuf_requirejs",
        ":proto_with_deps_test",
    ],
)

ts_library(
    name = "pizza_service_proto_test",
    testonly = 1,
    srcs = ["pizza_service_proto_test.spec.ts"],
    tsconfig = ":tsconfig.json",
    deps = [
        "//test/proto:pizza_service_ts_base_proto",
        "//test/proto:pizza_service_ts_grpc_web_proto",
        "//test/proto/common:pizza_ts_base_proto",
        "@npm//@types/jasmine",
        # Don't put delivery_person_ts_proto here, we want to test it is included transitively
    ],
)

ts_library(
    name = "pizza_service_proto_grpc_node_test",
    testonly = 1,
    srcs = ["pizza_service_proto_grpc_node_test.spec.ts"],
    tsconfig = ":tsconfig.json",
    deps = [
        "//test/proto:pizza_service_ts_base_proto",
        "//test/proto:pizza_service_ts_grpc_node_proto",
        "//test/proto/common:pizza_ts_base_proto",
        "@npm//@types/jasmine",
        # Don't put delivery_person_ts_proto here, we want to test it is included transitively
    ],
)

jasmine_node_test(
    name = "grpc_node_test",
    data = [
        "@npm//google-protobuf",
        "@npm//grpc",
    ],
    templated_args = ["--bazel_patch_module_resolver"],
    deps = [
        ":pizza_service_proto_grpc_node_test",
    ],
)

karma_web_test_suite(
    name = "pizza_service_proto_test_suite",
    srcs = [
        "require.config.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    # Files are served under /base/<WORKSPACE_NAME>/<path>
    static_files = [
        "@npm//:node_modules/@improbable-eng/grpc-web/dist/grpc-web-client.umd.js",
        "@npm//:node_modules/browser-headers/dist/browser-headers.umd.js",
    ],
    tags = ["native"],
    deps = [
        ":google_protobuf_requirejs",
        ":pizza_service_proto_test",
    ],
)

rollup_bundle(
    name = "test_es6_bundling",
    config_file = "rollup.config.js",
    entry_points = {
        ":test_bundling.ts": "index",
    },
    format = "cjs",
    link_workspace_root = True,
    output_dir = True,
    deps = [
        ":test_bundling_lib",
        "@npm//rollup-plugin-commonjs",
        "@npm//rollup-plugin-node-resolve",
    ],
)

ts_library(
    name = "test_bundling_lib",
    srcs = ["test_bundling.ts"],
    tsconfig = ":test_bundling_tsconfig.json",
    deps = [
        "//test/proto:inside_dir_ts_proto",
        "//test/proto:naming_styles_ts_proto",
        "//test/proto:pizza_service_ts_base_proto",
        "//test/proto:pizza_service_ts_grpc_web_proto",
        "//test/proto/common:delivery_person_ts_proto",
        "//test/proto/common:pizza_ts_base_proto",
        "@npm//@improbable-eng/grpc-web",
        "@npm//google-protobuf",
    ],
)

jasmine_node_test(
    name = "rollup_test",
    srcs = [
        ":rollup_test.spec.js",
    ],
    data = [
        ":test_es6_bundling",
    ],
    templated_args = ["--bazel_patch_module_resolver"],
)
