load("@rules_java//java:defs.bzl", "java_library")
load("@io_bazel_rules_webtesting//web:java.bzl", "java_web_test_suite")

java_web_test_suite(
    name = "integration_test",
    size = "medium",
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    tags = [
        "native",
    ],
    test_class = "test.integration.IntegrationTest",
    runtime_deps = [
        ":IntegrationTest",
    ],
)

java_library(
    name = "IntegrationTest",
    testonly = True,
    srcs = ["IntegrationTest.java"],
    data = [
        ":envoy.yaml",
        "//test/integration/client:prodserver",
    ],
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        "//test/integration/proto:service_java_grpc_proto",
        "//test/integration/proto:service_java_proto",
        "@bazel_tools//tools/java/runfiles",
        "@com_google_protobuf//:protobuf_java",
        "@io_bazel_rules_webtesting//java/com/google/testing/web",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//stub",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_seleniumhq_selenium_selenium_api",
        "@maven//:org_seleniumhq_selenium_selenium_support",
    ],
)
