load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

package(default_visibility = ["//test/integration:__subpackages__"])

proto_library(
    name = "service_proto",
    srcs = [
        "service.proto",
    ],
)

java_proto_library(
    name = "service_java_proto",
    deps = [
        ":service_proto",
    ],
)

java_grpc_library(
    name = "service_java_grpc_proto",
    srcs = [
        ":service_proto",
    ],
    deps = [
        ":service_java_proto",
    ],
)

typescript_proto_library(
    name = "service_ts_proto",
    proto = ":service_proto",
)
