load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//test:__subpackages__"])

load("@rules_typescript_proto//:index.bzl", "typescript_proto_library", "typescript_grpc_web_library")

proto_library(
    name = "delivery_person_proto",
    srcs = [
        "delivery_person.proto",
    ],
    deps = [
        ":pizza_proto",
    ],
)

typescript_proto_library(
    name = "delivery_person_ts_proto",
    proto = ":delivery_person_proto",
)

proto_library(
    name = "pizza_proto",
    srcs = [
        "pizza.proto",
    ],
)

typescript_proto_library(
    name = "pizza_ts_base_proto",
    proto = ":pizza_proto",
)

typescript_grpc_web_library(
    name = "pizza_ts_grpc_web_proto",
    proto = ":pizza_proto",
)
