load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

package(default_visibility = ["//test:__subpackages__"])


proto_library(
    name = "delivery_person_proto",
    srcs = [
        "delivery_person.proto",
    ],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        ":pizza_proto",
    ],
)

typescript_proto_library(
    name = "delivery_person_ts_proto",
    proto = ":delivery_person_proto",
)

proto_library(
    name = "pizza_proto",
    srcs = [
        "pizza.proto",
    ],
)

typescript_proto_library(
    name = "pizza_ts_base_proto",
    proto = ":pizza_proto",
)
